2008-04-14  Albert Chu <chu11@llnl.gov>

	* General documentation manpage audit/updates.

	* Minor code cleanup through.
	
2008-04-11  Albert Chu <chu11@llnl.gov>

	* ipmidetect/src/ipmidetectd/hash.h,
	ipmidetect/src/ipmidetectd/hash.c,
	ipmidetect/src/ipmidetectd/thread.h,
	ipmidetect/src/ipmidetectd/thread.c: Move to common/src and into
	the miscutils library.

	* ipmidetect/src/ipmidetectd/Makefile.am, common/src/Makefile.am:
	Update appropriately.

	* ipmidetect/src/ipmidetect, ipmidetect/src/ipmidetectd/,
	ipmiconsole/src/ipmiconsole: Move common error.h and error.c into
	common/src.

	* ipmidetect/src/ipmidetectd/Makefile.am,
	ipmidetect/src/ipmidetect/Makefile.am,
	ipmiconsole/src/ipmiconsole/Makefile.am, common/src/Makefile.am:
	Adjust appropriately.

	* ipmipower/src/error.h, ipmipower/src/error.c: Rename to ierror.h
	and ierror.c to differentiate itself from the common error.h and
	error.c.  Adjust all function names accordingly.
	
2008-04-10  Albert Chu <chu11@llnl.gov>

	* README, doc/freeipmi.7.pre.in: Add info on libraries.

	* General documentation manpage audit/updates.
	
2008-04-09  Albert Chu <chu11@llnl.gov>

	* configure.ac: Prepare for beta release.

	* Tagged Release-0_6_0_beta1.
	
2008-04-08  Albert Chu <chu11@llnl.gov>

	* doc/: More minor updates.

	* Various manpage cleanup and extra documentation.

	* ipmi-oem/: Change "cmd" to "command" everywhere.

	* libfreeipmi/, ipmidetect/, ipmimonitoring, ipmipower/,
	ipmiconsole/, ipmiping/, rmcpping/, doc/, configure.ac: Use
	.pre.in instead of just .in for manpages for consistency.

	* common/doc/manpage-common-reporting-bugs.man,
	common/doc/manpage-common-gpl-library-text.man,
	common/doc/manpage-common-gpl-program-text.man: New files.

	* Update manpages appropriately for report-bugs common manpage and
	gpl info.
	
	* Add copyrights to all manpages appropriately.

	* Remove "ORIGIN" and "AUTHORS" from most manpages.

	* common/doc/manpage-common-config-tool-general-use.man,