@@ -151,10 +151,16 @@ Much of FreeIPMI was written with HPC support in mind.  The
 configuration tools bmc-config(8), pef-config(8), and
 ipmi-sensors-config(8) come with file input/output support so that
 configuration can be copied and verified across nodes in a cluster.
-Most tools come with hostrange support so multiple hosts can be
-specified on the command line at the same time.  See tool manpages for
-more information.  Also see the document freeipmi-hostrange.txt for
-detailed usage and explanation.
+Most tools (like ipmipower(8) and ipmi-sensors(8)) come with hostrange
+support so multiple hosts can be specified on the command line at the
+same time and IPMI can be executed against the hosts in parallel.
+See tool manpages for more information.  Also see the document
+freeipmi-hostrange.txt for detailed usage and explanation.  The
+ipmimonitoring(8) tool interprets sensor readings as well as just
+reporting them.  By mapping sensor readings into NOMINAL, WARNING, or
+CRITICAL states, it makes monitoring sensors easier across large
+numbers of nodes.
+
 
 Development
 -----------
